# cargo-fips

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cargo-fips-spec.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  registry_correction.md
.github/workflows/: ci.yml
crates/cargo-fips/: Cargo.toml
crates/cargo-fips-registry/: Cargo.toml
crates/cargo-fips-registry/src/: lib.rs  loader.rs  model.rs
crates/cargo-fips-registry/tests/: registry.rs
crates/cargo-fips-runtime/: Cargo.toml
crates/cargo-fips-runtime/src/: lib.rs
crates/cargo-fips/src/: build_settings.rs  cbom.rs  cli.rs  config.rs  environment.rs  exit.rs  main.rs  metadata.rs  report.rs  signing.rs
crates/cargo-fips/src/backend/: aws_lc.rs  mod.rs  openssl.rs  pkcs11.rs  wolfcrypt.rs
crates/cargo-fips/src/commands/: attest.rs  check.rs  guard.rs  init.rs  mod.rs  oe.rs
fixtures/fail-competing-crypto/: Cargo.toml
fixtures/fail-fips-off/: Cargo.toml  fips.toml
fixtures/guard-openssl/: Cargo.toml  fips.toml
fixtures/guard-pkcs11/: Cargo.toml  fips.toml
fixtures/guard-wolfcrypt/: Cargo.toml  fips.toml
fixtures/pass-aws-lc-fips/: Cargo.toml
fixtures/pass-aws-lc-fips/src/: main.rs
registry/modules/: aws-lc-fips.json  openssl.json  wolfcrypt.json
scripts/: preflight.sh
