[package]
name = "cargo-fips-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed FIPS module registry (certificates, tested operating environments, approved algorithms) for cargo-fips."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
