[package]
name = "cargo-fips-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime companion for cargo-fips: assert FIPS mode and record module identity at application startup."

[dependencies]
# Optional, only pulled in when the `aws-lc-rs` feature is enabled. The default
# build is dependency-free (NullProbe only) and needs no C/FIPS toolchain.
aws-lc-rs = { version = "1", optional = true }
# Optional, only pulled in when the `tracing` feature is enabled, to emit a
# structured startup audit record. No-op (and absent) otherwise.
tracing = { version = "0.1", optional = true }

[features]
# Enable `AwsLcRsProbe`. This turns on aws-lc-rs's FIPS backend
# (`aws-lc-fips-sys`), which requires a C toolchain (cmake, a C compiler, and Go)
# to build — the same backend a FIPS application already links.
aws-lc-rs = ["dep:aws-lc-rs", "aws-lc-rs/fips"]
# Enable `record()` to emit the runtime FIPS status into the `tracing` pipeline.
tracing = ["dep:tracing"]
