[package]
name = "cargo-fips"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A Cargo subcommand for FIPS 140-3 build assurance and evidence generation in Rust."
keywords = ["fips", "cmvp", "compliance", "cargo-subcommand", "cbom"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-fips"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
cargo_metadata.workspace = true
cargo-fips-registry.workspace = true
